manifests-old/disabled/apps/promtail/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promtail
  namespace: logging
  labels:
    app: promtail
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://raw.githubusercontent.com/grafana/loki/master/docs/sources/logo.png
    forecastle.stakater.com/appName: Dashboard
    forecastle.stakater.com/group: Logging
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: ingress-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: promtail.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: promtail-headless
                port:
                  number: 3101
  tls:
    - hosts:
        - promtail.cluster.rebelinblue.com
      secretName: promtail-tls
